@@ -1,3 +1,12 @@
+2007-01-23  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* gnome-screenshot.c: Add a value for the "no effect" value
+	of the border_effect GConf key; add it to the effects combo
+	box.  (#399859)
+
+	* gnome-screenshot.schemas.in: Fix the description of the
+	border-effect key.
+
 2007-01-22  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* gnome-screenshot.c: Use symbolic names for the GConf keys;
